# ai_agents

./: pyproject.toml
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: deep_research.py  email_agent.py
3_crew/: main.py  pyproject.toml
3_crew/coder/: pyproject.toml
3_crew/coder/output/: code_and_output.txt
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/: crew.py  main.py
3_crew/debate/src/debate/config/: agents.yaml
3_crew/engineering_team/: pyrightconfig.json
3_crew/engineering_team/example_output_4o/: accounts.py
3_crew/engineering_team/example_output_mini/: accounts.py
3_crew/engineering_team/example_output_new/: accounts.py
3_crew/engineering_team/src/engineering_team/config/: agents.yaml
3_crew/engineering_team/typings/gradio/: __init__.pyi
3_crew/equity_analyst/: README.md  pyproject.toml
3_crew/equity_analyst/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/equity_analyst/output/: decision.md  research_report.json  trending_companies.json
3_crew/equity_analyst/src/equity_analyst/: crew.py  main.py
3_crew/equity_analyst/src/equity_analyst/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher/: main.py
